force-app/main/default/objects/Account_Executive_Revenue__c/Account_Executive_Revenue__c.object-meta.xml
<CustomObject>
    <label>Account Executive Revenue</label>
    <nameField>
        <label>Account Executive Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Executive Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>