force-app/main/default/objects/Account_Executive_Revenue__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Executive_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>