force-app/main/default/objects/Account_Executive_Revenue__c/fields/BDM_s_Office__c.field-meta.xml
<CustomField>
    <fullName>BDM_s_Office__c</fullName>
    <formula>TEXT(Account_Executive__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM&apos;s Office</label>
    <type>Text</type>
</CustomField>