force-app/main/default/objects/Account_Executive_Revenue__c/fields/Billing_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Billing_Forecast__c</fullName>
    <label>Billing Forecast</label>
    <referenceTo>Forecast__c</referenceTo>
    <relationshipLabel>Account Executive Revenues</relationshipLabel>
    <relationshipName>Account_Executive_Revenues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>