force-app/main/default/objects/Account_Executive_Revenue__c/fields/BillingForecast_Date__c.field-meta.xml
<CustomField>
    <fullName>BillingForecast_Date__c</fullName>
    <formula>Billing_Forecast__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>