force-app/main/default/objects/Account_Executive_Revenue__c/fields/Is_Account_Executive_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Executive_Logged_In__c</fullName>
    <formula>IF(  Account_Executive__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Executive Logged In</label>
    <type>Checkbox</type>
</CustomField>