force-app/main/default/objects/Account_Executive_Revenue__c/fields/Is_BDM_s_Office_Same_as_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM_s_Office_Same_as_Logged_In_User__c</fullName>
    <formula>IF (BDM_s_Office__c =  TEXT($User.Office__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM&apos;s Office Same as Logged In User</label>
    <type>Checkbox</type>
</CustomField>