force-app/main/default/objects/Account_Executive_Revenue__c/fields/Is_BDM_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_BDM_the_Logged_In_User__c</fullName>
    <formula>IF(  Account_Executive__c  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BDM the Logged In User</label>
    <type>Checkbox</type>
</CustomField>