force-app/main/default/objects/Account_Executive_Revenue__c/fields/Is_Manager_s_Manager_s_Manager_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_s_Manager_s_Manager_Logged_In__c</fullName>
    <formula>IF( Account_Executive__r.Manager.Manager.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Manager&apos;s Manager&apos;s Manager Logged In</label>
    <type>Checkbox</type>
</CustomField>