force-app/main/default/objects/Account_Executive_Revenue__c/fields/Is_Manager_s_Manager_the_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_s_Manager_the_Logged_In_User__c</fullName>
    <formula>IF(  Account_Executive__r.Manager.ManagerId  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Manager&apos;s Manager the Logged In User</label>
    <type>Checkbox</type>
</CustomField>