force-app/main/default/objects/Account_Executive_Revenue__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Account Executive Revenues</relationshipLabel>
    <relationshipName>Account_Executive_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>