force-app/main/default/objects/Account_Executive_Revenue__c/fields/Job_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Created_Date__c</fullName>
    <formula>Job__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Date</label>
    <type>Date</type>
</CustomField>