force-app/main/default/objects/Account_Executive_Revenue__c/fields/Revenue_Amount_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount_Calculation__c</fullName>
    <formula>IF(Type__c == &apos;Account Executive 1&apos;, 
Billing_Forecast__r.Revenue_Amount__c / Billing_Forecast__r.Account_Executive_Count__c, Billing_Forecast__r.Revenue_Amount__c / 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>